force-app/main/default/objects/KimbleOne__RiskSeverity__c/KimbleOne__RiskSeverity__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Risk Severity</label>
    <nameField>
        <label>Risk Severity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Severity</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>