force-app/main/default/objects/KimbleOne__RiskSeverity__c/fields/KimbleOne__Enum__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Enum__c</fullName>
    <label>Z_Obsolete - Enum</label>
    <length>10</length>
    <type>Text</type>
</CustomField>