force-app/main/default/objects/KimbleOne__RiskSeverity__c/fields/KimbleOne__MultiplierProbability__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MultiplierProbability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The probability to use when rolling up this severity onto the Probability field in Multiplier Risks</description>
    <label>Multiplier Probability</label>
    <referenceTo>KimbleOne__RiskProbability__c</referenceTo>
    <relationshipLabel>Risk Severity</relationshipLabel>
    <relationshipName>RiskSeverity</relationshipName>
    <type>Lookup</type>
</CustomField>