force-app/main/default/objects/KimbleOne__RiskSeverity__c/fields/KimbleOne__SeverityFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SeverityFactor__c</fullName>
    <label>Severity Factor</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>